# FLSYS

./: .gitignore  README.md  certificate.conf  config.toml  generate_cert.sh  global_model_round_1  global_model_round_2  global_model_round_3  global_model_round_4  global_model_round_5  pre.md  pyproject.toml  result.json
flsys/: __init__.py  client_app.py  config.py  monitor.py  my_strategy.py  server_app.py  task.py  test.py
flsys/models/: MobileNetV3.py  train.py  train1.py
models/: MobileNetV3.py  ResNet.py  train.py  train1.py
wandb/run-20250320_195515-yju87jqb/: run-yju87jqb.wandb
wandb/run-20250320_195515-yju87jqb/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
