[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flsys"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.16.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "wandb",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "aoshine999"

[tool.flwr.app.components]
serverapp = "flsys.server_app:app"
clientapp = "flsys.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
fraction-fit = 0.5
local-epochs = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
